# agentic-ai-cognizes

./: .env.example  .gitattributes  .gitignore  AGENTS.md  OPTIMIZATION_SUMMARY.md  PHASE2_PHASE3_OPTIMIZATION_PLAN.md  README.md  TEAM.md  WORKFLOW_OPTIMIZATION_PLAN.md  docker-compose.yml  github-actions-phase1-summary.md  main.py  pyproject.toml  spawn-workflow-optimizer-2.sh  spawn-workflow-optimizer.sh  workflow-optimizer-agent.json
.agent/skills/doc-review/: SKILL.md
.backup/oceabase/: Doubao-Context Engineering 深度调研报告：混合检索、RAG、Memory 等云原生方案.md  Doubao-OceanBase深度调研报告：Agentic.md  Doubao-阿里云 Agent Engine 层 DB 选型.md  Qwen-Context Engineering 云原生方案深度调研.md  Qwen-OceanBase深度研究报告：Agentic AI时代的基石与前沿.md  Qwen-阿里云 Agent Engine 层数据库选型中 OceanBase 的定位深度调研.md
.claude/: .prompts.engine.md  .prompts.md  workflow-optimizer-1.json
.github/: teams.md
.github/actions/setup-node/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: ci-cd-pipeline.yml  ci.yml  optimized-cache.yml  optimized-ci-v2.yml  optimized-ci.yml  performance-benchmark.yml  ruff.yml  ui-tests.yml
agents/api/: main.py
agents/api/routes/: tasks.py  websocket.py
agents/api/services/: paper_service.py  websocket_service.py
agents/claude/: base.py  skills.py  workflow_agent.py
agents/core/: config.py
assets/papers/.metadata/: general_20251213_001208_test.pdf.json  general_20251213_094117_test.pdf.json  general_20251213_155809_test.pdf.json  general_20251213_162214_test.pdf.json  general_20251213_162530_test.pdf.json  general_20251213_200304_test.pdf.json  general_20251213_205514_test.pdf.json  general_20251213_205533_test.pdf.json  general_20251213_205546_test.pdf.json  general_20251213_211102_test.pdf.json  general_20251213_211119_test.pdf.json  general_20251213_211133_test.pdf.json  general_20251214_171251_test.pdf.json  general_20251214_171307_test.pdf.json
assets/papers/heartfelt/llm-agents/: When Single-Agent with Skills Replace Multi-Agent Systems and When They Fai.md
assets/papers/translation/llm-agents/: When Single-Agent with Skills Replace Multi-Agent Systems and When They Fai.md
docs/: 000-prd-architecture.md  000-prd.md  000-roadmap.md  001-architecture.md  001-framework.md  001-implementation-plan.md  002-development.md  002-task-checklist.md  003-user-guide.md  004-testing.md  005-github-actions.md  006-agents.md  007-apis.md  008-ui.md
docs/engine/: 000-roadmap.md  010-the-pulse.md  020-the-hippocampus.md  030-the-perception.md  040-the-realm-of-mind.md  README.md
docs/practice/: 000-roadmap-oceanbase.md  000-roadmap.md  001-foundation-unified-schema-design.md  001-task-checklist.md  010-the-pulse.md  020-the-hippocampus.md  030-the-perception.md  040-the-realm-of-mind.md  050-integrated-demo.md
docs/research/: 000-cognitive-enhancement.md  001-cognee.md  001-context-engineering-origin.md  001-context-engineering.md  002-agent-frameworks.md  002-google-agent-builder.md  003-cognee.md  003-oceanbase.md  003-oceanbases.md  003-vector-databases-selection.md  003-vector-databases.md  003-vector-search-algorithm.md  004-cognee.md  004-oceanbase.md  004-vector-databases-selection.md  004-vector-databases.md  004-vector-search-algorithm.md  005-agent-frameworks.md  005-bettafish.md  005-neo4j.md  005-oceanbase.md  005-vector-databases.md  006-bettafish.md  006-cognee.md  007-neo4j.md  008-bettafish.md  010-context-engineering.md  020-agent-frameworks.md  020-agent-runtime-frameworks.md  021-google-agent-builder.md  070-ag-ui.md  070-agui.md  080-agent-sandbox.md  082-agent-sandbox.md
scripts/: setup.sh
src/cognizes/adapters/postgres/: memory_service.py  tracing.py
src/cognizes/api/: main.py
src/cognizes/api/routes/: papers.py  websocket.py
src/cognizes/api/services/: paper_service.py
src/cognizes/core/: database.py
src/cognizes/core/repositories/: __init__.py  event.py  facts.py  memory.py
src/cognizes/engine/api/: main.py
src/cognizes/engine/hippocampus/: consolidation_worker.py  memory_service.py
src/cognizes/engine/perception/: benchmark.py  embedder.py  generate_test_data.py  reranker.py
src/cognizes/engine/pulse/: pg_notify_listener.py  state_manager.py
src/cognizes/engine/schema/: agent_schema.sql  hippocampus_schema.sql  perception_schema.sql
src/cognizes/examples/e2e_travel_agent/: pyproject.toml
tests/agents/: conftest.py  run_tests.py
tests/agents/fixtures/factories/: paper_factory.py  task_factory.py
tests/agents/fixtures/mocks/: mock_websocket.py
tests/agents/integration/: test_api_integration.py
tests/integration/core/: test_database_integration.py
tests/integration/hippocampus/: conftest.py  test_episodic_performance.py  test_read_your_writes.py  test_retention_manager_db.py  test_schema.py
tests/integration/mind/: conftest.py  test_adk_integration.py  test_adk_llmagent.py  test_e2e.py  test_tracing.py
tests/integration/perception/: conftest.py  test_high_selectivity.py  test_hybrid_search.py  test_rag_e2e.py
tests/integration/pulse/: test_event_bridge_e2e.py  test_notify_latency.py  test_state_debug_db.py  test_state_manager_db.py
tests/performance/mind/: locustfile.py
tests/ui/__mocks__/: handlers.ts
tests/ui/e2e/: mock-api.ts  papers.spec.ts
tests/ui/fixtures/: papers.json
tests/ui/helpers/: factory.ts  render.tsx  test-utils.tsx
tests/unittests/hippocampus/: conftest.py
tests/unittests/mind/: test_postgres_memory_service.py  test_sandbox.py  test_session_service.py
tests/unittests/perception/: test_embedder.py  test_ingestion.py  test_rag_pipeline.py  test_search_visualizer.py
tests/unittests/pulse/: test_state_manager.py
ui/: jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
ui/components/: providers.tsx
ui/components/common/: Notifications.tsx
ui/hooks/: useWebSocket.ts
ui/lib/: api.ts
ui/src/: setupTests.ts
ui/src/app/: layout.tsx
ui/src/hooks/: useApi.ts  useLocalStorage.ts  useWebSocket.ts
ui/src/lib/: api.ts
ui/src/store/: index.ts
ui/src/types/: index.ts
ui/store/: index.ts
ui/test/: setup.ts
(+49 files in other folders)
